# drnb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  notebooks-site.yml
docs/: environment-variables.md  experiment-checkpointing.md  maintenance.md  nn-plugin-protocol.md  notebook-site.md  plugin-protocol.md
drnb-plugin-sdk/: README.md  pyproject.toml
drnb-plugin-sdk/src/drnb_plugin_sdk/: __init__.py  protocol.py
drnb-plugin-sdk/src/drnb_plugin_sdk/helpers/: __init__.py  logging.py  neighbors.py  paths.py  results.py  runner.py
drnb-plugin-sdk/tests/: test_neighbors.py  test_protocol.py
nn-plugin-sdks/drnb-nn-plugin-sdk-312/: README.md  pyproject.toml
nn-plugin-sdks/drnb-nn-plugin-sdk-312/src/drnb_nn_plugin_sdk/: __init__.py  protocol.py
nn-plugin-sdks/drnb-nn-plugin-sdk-312/src/drnb_nn_plugin_sdk/helpers/: runner.py
nn-plugin-sdks/drnb-nn-plugin-sdk-313/: README.md  pyproject.toml
nn-plugin-sdks/drnb-nn-plugin-sdk-313/src/drnb_nn_plugin_sdk/: __init__.py  protocol.py
nn-plugin-sdks/drnb-nn-plugin-sdk-313/src/drnb_nn_plugin_sdk/helpers/: __init__.py  paths.py  results.py
nn-plugins/: plugins.toml
nn-plugins/annoy/: README.md  drnb-nn-plugin-run.py  pyproject.toml
nn-plugins/faiss/: README.md  drnb-nn-plugin-run.py  pyproject.toml
nn-plugins/hnsw/: drnb-nn-plugin-run.py  pyproject.toml
nn-plugins/torchknn/: README.md  drnb-nn-plugin-run.py  pyproject.toml
notebooks/: 20ng.ipynb  _open-image.html  _quarto.yml  densmap.ipynb  do-hubs-hurt.ipynb  experiments.ipynb  hubness.ipynb  index.qmd  iris-randproj.ipynb  knn.ipynb  ncd-newsgroups.ipynb  ncd_newsgroups.ipynb  ncvis.ipynb  nn.ipynb  pacmap.ipynb  pca-nn-overlap.ipynb  pca.ipynb  plot-options.ipynb  pymde.ipynb  spacemap.ipynb  template.ipynb  tfidf-renorm-prep.ipynb  trimap.ipynb  tsne.ipynb  tsvd.ipynb  umap.ipynb  umapspectral.ipynb
notebooks/articles/: _tfidf-renorm-prep.ipynb  htumap.ipynb
notebooks/data-pipeline/: ZZZ_list-data.ipynb  _README.md  airfoil.ipynb  avonet.ipynb  cifar10.ipynb  cifar10act.ipynb  coil100.ipynb  coil20.ipynb  curve2d.ipynb  cytometry.ipynb  embdensity.ipynb  fashion.ipynb  frey.ipynb  galaxy10sdss.ipynb  grid2d.ipynb  iclr.ipynb  ijcnn.ipynb  iris.ipynb  isofaces.ipynb  isoswiss.ipynb  kuzushiji.ipynb  lamanno2020.ipynb  macosko2015.ipynb  mammoth.ipynb  mediabias.ipynb  mnist.ipynb  mnist1d.ipynb  ng20.ipynb  ng20pacmap.ipynb  norb.ipynb  oeis.ipynb  olivetti.ipynb  olivetti92x112.ipynb  onet.ipynb  penguins.ipynb  s1k.ipynb  scrna-dr2020.ipynb  scurvehole.ipynb  shuttle.ipynb  spheres.ipynb  (+4 more)
notebooks/embed-pipeline/: chaining-methods.ipynb  cne.ipynb  custom-umap.ipynb  experiments.ipynb  htumap.ipynb  leopold.ipynb  localmap.ipynb  ncvis.ipynb  negumap.ipynb  pacmap-local-scaling.ipynb  pacmap.ipynb  pca.ipynb  pymde.ipynb  randproj.ipynb  smmds.ipynb  spacemap.ipynb  template.ipynb  topometry.ipynb  trimap.ipynb  tsne.ipynb  tsvd.ipynb  umap.ipynb  umato.ipynb
plugin-sdks/drnb-plugin-sdk/: README.md
plugin-sdks/drnb-plugin-sdk-310/: pyproject.toml
plugin-sdks/drnb-plugin-sdk-310/src/drnb_plugin_sdk/: protocol.py
plugin-sdks/drnb-plugin-sdk-310/src/drnb_plugin_sdk/helpers/: paths.py  runner.py  version.py
plugin-sdks/drnb-plugin-sdk-310/src/drnb_plugin_sdk_310.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plugin-sdks/drnb-plugin-sdk-310/src/drnb_plugin_sdk_310/helpers/: runner.py
plugin-sdks/drnb-plugin-sdk-310/tests/: test_version_helpers.py  test_version_helpers_310.py
plugin-sdks/drnb-plugin-sdk-312/: pyproject.toml
plugin-sdks/drnb-plugin-sdk-312/src/drnb_plugin_sdk/: __init__.py  protocol.py
plugin-sdks/drnb-plugin-sdk-312/src/drnb_plugin_sdk/helpers/: __init__.py  paths.py  results.py  runner.py
plugin-sdks/drnb-plugin-sdk-312/src/drnb_plugin_sdk_312.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plugin-sdks/drnb-plugin-sdk-312/tests/: test_protocol.py  test_runner.py  test_version_helpers.py  test_version_helpers_312.py
plugin-sdks/drnb-plugin-sdk-313/: README.md  conftest.py  pyproject.toml
plugin-sdks/drnb-plugin-sdk-313/src/drnb_plugin_sdk/: __init__.py  protocol.py
plugin-sdks/drnb-plugin-sdk-313/src/drnb_plugin_sdk/helpers/: logging.py
plugins/: plugins.toml
plugins/cne/: README.md  drnb-plugin-run.py  pyproject.toml
plugins/ncvis/: README.md  drnb-plugin-run.py  protocol_compat.py  pyproject.toml
plugins/pacmap/: drnb-plugin-run.py  localscale.py  neighbor_pairs.py  pyproject.toml
plugins/pacmap/tests/: test_pacmap.py
plugins/pymde/: README.md  drnb-plugin-run.py  pyproject.toml
plugins/topometry/: drnb-plugin-run.py  pyproject.toml
plugins/trimap/: drnb-plugin-run.py  pyproject.toml
plugins/tsne/: drnb-plugin-run.py  pyproject.toml
plugins/umato/: drnb-plugin-run.py  pyproject.toml
scripts/: create_plugin.py  install.sh  optimize_site_images.py  preview_notebook_site.py
src/: drnb_plugin_sdk
src/drnb/: __init__.py  dataset.py  datasets.py  dimension.py  distance.py  distances.py  eval.py  experiment.py  experiment_common.py  experiment_merge.py  experiment_persistence.py  experiment_report.py  experiment_runner.py  graph.py  io.py  log.py  neighbors.py  optim.py  pipeline.py  plot.py  preprocess.py  rng.py  sampling.py  similarity.py  svd.py  triplets.py  types.py  util.py  yinit.py
src/drnb/plugins/pacmap/: drnb-plugin-run.py  pyproject.toml
src/drnb/plugins/pymde/: drnb-plugin-run.py  pyproject.toml
src/drnb/plugins/sklearn/: drnb-plugin-run.py  pyproject.toml
tests/: test_check_embedder.py  test_create_plugin.py  test_data_io.py  test_dimension.py  test_embed_context.py  test_experiment_checkpoint.py  test_external_embedder.py  test_external_init.py  test_json_serialization.py  test_label_pres.py  test_localscale.py  test_neighbors_imports.py  test_nnplugins_external.py  test_pacmap.py  test_palette_io.py  test_pipeline_creation.py  test_plot_scale_lid.py  test_plotly_clickable.py  test_plugin_protocol.py  test_registry.py  test_sklearn_mds.py  test_version_info.py
tests/plugins/: test_pacmap_plugin.py  (+4 more)
(+124 files in other folders)
