[project]
name = "drnb"
version = "0.3.0"
description = "Dimensionality reduction notebooks"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{name = "James Melville", email = "jlmelville@gmail.com"}]
license = {text = "MIT"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "glasbey>=0.2.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    # numba currently leaves little room to manoeuvre with numpy
    "numpy>=2.1,<3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "pynndescent>=0.5.13",
    "rich>=14.2.0",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
    "drnb-plugin-sdk-313>=0.1.0",
    "drnb-nn-plugin-sdk-313>=0.1.0",
    "ipywidgets>=8.1.8",
    # nbformat needed for plotly support
    "nbformat>=5.10.4",
]


[tool.ruff.lint]
# Enable the isort plugin
select = ["I"]

[tool.pylint]
disable = [
    "invalid-name",
    "missing-module-docstring",
    "line-too-long",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
drnb-plugin-sdk-313 = { path = "plugin-sdks/drnb-plugin-sdk-313" }
drnb-nn-plugin-sdk-313 = { path = "nn-plugin-sdks/drnb-nn-plugin-sdk-313" }
