
[metadata]
name = drnb
version = 0.1.0
author = James Melville
author_email = jlmelville@gmail.com
description = Dimensionality reduction notebook 
long_description = file: README.md
license_files = LICENSE

[options]
package_dir=
    =src
packages=find:
zip_safe = True
install_requires =
    importlib_metadata
    pandas
    umap-learn
    hnswlib
    openTSNE
    pymde
    pacmap
    cython
    ncvis
    trimap
    jupyterlab
    nb_black
    matplotlib
    seaborn
    ipywidgets
    ipython-autotime
    faiss
    rich
    jupyterlab-system-monitor
    ncompress
    json-fix
    glasbey

[options.packages.find]
where=src

[options.extras_require]
dev = 
    black
    flake8
    isort
    pylint


[flake8]
# Turn on everything
# Default: E,F,W,C90
# E***/W***: pep8 errors and warnings
# F***: PyFlakes codes
# C9**: McCabe complexity plugin mccabe
# N8**: Naming Conventions plugin pep8-naming
select = E, W, F, C, N
# Some of the above are turned off because they are duplicated by pylint. Some are
# turned off because black either deals with them automatically, or makes the decision
# to format lines in a way that annoys flake8 under some conditions.
# See https://github.com/kaste/SublimeLinter-addon-black-for-flake/blob/master/plugin.py
# and https://github.com/psf/black/issues/429
ignore = E2, E3, E5,
    E101, E111, E114, E115, E116, E117, E121, E122, E123, E124, E125, E126, E127,
    E128, E129, E131, E133,
    E201, E202,
    E203,   # E203 Whitespace before ':' also hits slices, e.g. '1 : 10'.
    E221, E222, E223, E224, E225, E226, E227, E231, E241, E251, E261, E262, E265, E271,
    E272,
    E302, E303, E306,
    E401,   # E401 Multiple imports on one line: handled by pylint multiple-imports.
    E402,   # E402 Module level import not at top of file: pylint wrong-import-position handles this.
    E501,   # E501 Line too long (we are using black to enforce this).
    E502, 
    E701, E702, E703, E704,
    E711,   # E711 Comparison to None (pylint singleton-comparison)
    E722,   # E722 Do not use bare 'except': pylint bare-except handles this.
    E999,   # E999 SyntaxError: handle by pylint syntax-error.
    W1, W2, W3,
    W292,   # W292 No newline at end of file: dealt with by pylint
    W391,   # W391 Blank line at end of file: duplicates pylint trailing-newlines
    W503,   # W503 Line break occurred before a binary operator
            # PEP8 flipped on this: https://github.com/python/peps/commit/c59c4376ad233a62ca4b3a6060c81368bd21e85b
    W504, 
    W605,   # W605 Invalid escape sequence: dealt with by pylint anomalous-backslash-in-string
    F401,   # F401 module imported but unused: false positive when a top-level __init__ wants to export names from submodules.
    F402,   # F402 shadowed loop variable: duplicates pylint redefined-outer-name
    F541,   # F541 duplicates pylint f-string-without-interpolation
    F811,   # F811 redefinition: duplicates pylint function-refined
    F821,   # F821 undefined name: dealt with by pylint undefined-variable 
    F841,   # F841 local variable is assigned to but never used: pylint unused-variable handles this 
    N803    # N803 Argument name should be lower case
# Other ignored rules I've seen
# E266 Too many leading '#' for block comment
# F403 'from module import *' used; enable to detect undefined names
max-line-length = 88
# McCabe Complexity
max-complexity = 20

[pylint]
disable = 
    locally-disabled, # definitely want to locally turn off some linting
    line-too-long, # handled by flake8
    trailing-whitespace, # handled by flake8
    missing-docstring, # missing-docstring 
    literal-comparison, # handled by flake8
    too-many-instance-attributes, too-few-public-methods, too-many-public-methods,
    too-many-arguments, too-many-locals, too-many-branches, invalid-name, duplicate-code
# Uncomment and add short variables names you think should be allowed (e.g. i, j, n)
#good-names=
max-line-length = 88

# List of members which are set dynamically and missed by pylint inference
# system, and so shouldn't trigger E1101 when accessed. Python regular
# expressions are accepted.
generated-members= 
    np.*,
    numba.*,
    torch.*,
    ncvis.*

extension-pkg-allow-list=hnswlib

[isort]
profile = black
