[metadata]
name = drnb
version = 0.1.0
description = Dimensionality reduction notebook
long_description = file: README.md
long_description_content_type = text/markdown
author = James Melville
author_email = jlmelville@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    cython
    faiss
    glasbey
    hnswlib
    importlib-metadata
    ipython-autotime
    ipywidgets
    json-fix
    jupyterlab
    jupyterlab-system-monitor
    matplotlib
    nb-black
    ncompress
    ncvis
    openTSNE
    pacmap
    pandas
    pymde
    rich
    seaborn
    trimap
    umap-learn
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
    setup-cfg-fmt

[flake8]
select = E, W, F, C, N
ignore = E2, E3, E5,
    E101, E111, E114, E115, E116, E117, E121, E122, E123, E124, E125, E126, E127,
    E128, E129, E131, E133,
    E201, E202,
    E203,
    E221, E222, E223, E224, E225, E226, E227, E231, E241, E251, E261, E262, E265, E271,
    E272,
    E302, E303, E306,
    E401,
    E402,
    E501,
    E502,
    E701, E702, E703, E704,
    E711,
    E722,
    E999,
    W1, W2, W3,
    W292,
    W391,
    W503,
    W504,
    W605,
    F401,
    F402,
    F541,
    F811,
    F821,
    F841,
    N803
max-line-length = 88
max-complexity = 20

[pylint]
disable =
    locally-disabled,
    line-too-long,
    trailing-whitespace,
    missing-docstring,
    literal-comparison,
    too-many-instance-attributes, too-few-public-methods, too-many-public-methods,
    too-many-arguments, too-many-locals, too-many-branches, invalid-name, duplicate-code
max-line-length = 88
generated-members =
    np.*,
    numba.*,
    torch.*,
    ncvis.*
extension-pkg-allow-list = hnswlib

[isort]
profile = black
