[project]
name = "drnb-nn-plugin-sdk-313"
version = "0.1.0"
description = "Shared protocol helpers for drnb nearest-neighbor plugins (Python 3.13)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.1,<3",
]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "James Melville"}]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
