[project]
name = "drnb-nn-plugin-annoy"
version = "0.0.1"
description = "Annoy nearest-neighbor plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "annoy>=1.17.3",
    "scikit-learn>=1.6.0",
    "drnb-nn-plugin-sdk-312>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-nn-plugin-sdk-312 = { path = "../../nn-plugin-sdks/drnb-nn-plugin-sdk-312" }
