[project]
name = "drnb-nn-plugin-hnsw"
version = "0.0.1"
description = "HNSW nearest-neighbor plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "hnswlib>=0.8.0",
    "scikit-learn>=1.6.0",
    "drnb-nn-plugin-sdk-312>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-nn-plugin-sdk-312 = { path = "../../nn-plugin-sdks/drnb-nn-plugin-sdk-312" }
