[project]
name = "drnb-nn-plugin-torchknn"
version = "0.0.1"
description = "TorchKNN nearest-neighbor plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6,<2.7",
    "drnb-nn-plugin-sdk-312>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-nn-plugin-sdk-312 = { path = "../../nn-plugin-sdks/drnb-nn-plugin-sdk-312" }
