[project]
name = "drnb-plugin-sdk-310"
version = "0.1.0"
description = "Shared helpers for drnb plugin runners (Python 3.10 compatible)"
requires-python = "==3.14.2"
dependencies = [
    "numpy>=1.22,<2.1",
]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "James Melville"}]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
