[project]
name = "drnb-plugin-sdk-313"
version = "0.1.0"
description = "Shared helpers for drnb plugin runners (Python 3.13)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.1,<3",
]
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "James Melville"}]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
