[project]
name = "drnb-plugin-pacmap"
version = "0.0.1"
description = "PaCMAP/LocalMAP plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pacmap>=0.8.0",
    "drnb-plugin-sdk-312>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk-312 = { path = "../../plugin-sdks/drnb-plugin-sdk-312" }

[tool.setuptools]
py-modules = ["neighbor_pairs", "localscale"]

[dependency-groups]
dev = [
    "pytest",
]