[project]
name = "drnb-plugin-pymde"
version = "0.0.1"
description = "PyMDE plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pymde>=0.2.3",
    "torch>=2.6,<2.7",
    "scipy",
    "drnb-plugin-sdk>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk = { path = "../../plugin-sdks/drnb-plugin-sdk" }
