[project]
name = "drnb-plugin-pymde"
version = "0.0.1"
description = "PyMDE plugin runner for drnb"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy",
    "pymde>=0.3.0",
    "torch>=2.12,<2.13",
    "scipy",
    "drnb-plugin-sdk-313>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk-313 = { path = "../../plugin-sdks/drnb-plugin-sdk-313" }
