[project]
name = "drnb-plugin-topometry"
version = "0.0.1"
description = "topometry plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "drnb-plugin-sdk-312>=0.1.0",
    "hnswlib>=0.8.0",
    "topometry>=0.2.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk-312 = { path = "../../plugin-sdks/drnb-plugin-sdk-312" }
