[project]
name = "drnb-plugin-trimap"
version = "0.0.1"
description = "TriMap plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "trimap",
    "drnb-plugin-sdk>=0.1.0",
    "setuptools<81",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk = { path = "../../drnb-plugin-sdk" }
