[project]
name = "drnb-plugin-trimap"
version = "0.0.1"
description = "TriMap plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "trimap>=1.1.5",
    "drnb-plugin-sdk-312>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk-312 = { path = "../../plugin-sdks/drnb-plugin-sdk-312" }
