[project]
name = "drnb-plugin-tsne"
version = "0.0.1"
description = "openTSNE plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "openTSNE",
    "drnb-plugin-sdk>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk = { path = "../../plugin-sdks/drnb-plugin-sdk" }
