[project]
name = "drnb-plugin-umato"
version = "0.0.1"
description = "UMATO plugin runner for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "umato>=0.1.3",
    "drnb-plugin-sdk>=0.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
drnb-plugin-sdk = { path = "../../drnb-plugin-sdk" }
