[project]
name = "drnb-plugin-sklearn"
version = "0.0.1"
description = "Consolidated sklearn-based plugin runners for drnb"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scikit-learn",
    "drnb @ file://../../.."
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
